
  * Fixed: Null pointer de-referencing when dissecting query
      strings starting with "&" right after "?" (#2418192).
      Thanks to Harvey Vrsalovic for reporting!
  * Fixed: Memory leak in uriFreeQueryList function (#2413066)
      Thanks to Daniel Chapiesky for reporting!
  * Fixed: Memory leak in uriNormalizeSyntax(Ex) functions (#2413066)
      Thanks to Daniel Chapiesky for reporting!
  * Soname: 1:9:0

2008-11-08 -- 0.7.3

  * Fixed: Missing NULL check in parsing routines
      Thanks to Sezai Tekin for reporting!
  * Fixed: uriparser now builds on Cygwin
  * Fixed: Now shipping gnulib's config.guess from HEAD
      which is suitable for Haiku (#2116355)
  * Changed: swprintf requirement resolved
  * Changed: Build system changes:
      - configure option --enable-doc added
      - configure.in renamed to configure.ac
      - some Autotools files moved to build-aux directory
  * Added: Qt Assistant documentation output:
      - Qt Compressed Help (.qch) at <doc/uriparser-doc-*.qch>
      - Qt Help Project (.qhp) at <doc/html/index.qhp>
      Generation requires Doxygen 1.5.7.1-20081103 or later.
  * Soname: 1:8:0

2008-09-01 -- 0.7.2

  * Fixed: Bad cleanup logic in functions
      - uriAddBaseUri(..)
      - uriRemoveBaseUri(..)
      Previously you needed to call uriFreeUriMembers on return code
      URI_ERROR_MALLOC and only then. So that's why these functions now
      take cleanup off your shoulders. An extra call to uriFreeUriMembers
      from your side is still needed in case of success.
  * Soname: 1:7:0

2008-04-27 -- 0.7.1

  * Fixed: Bogus syntax error when parsing URIs with port-like
      passwords, e.g. "http://user:21@host/" (#1948038)
      Thanks to Friedrich Delgado Friedrichs for reporting!
  * Fixed: Parser did not handle trailing slashes correctly in some cases,
      which also made the structures produced from parsing "http://e.com/"
      and "http://e.com" indistinguishable. (#1950126)