@@ -22,21 +22,5 @@ URI_DOC_FILES = \
 	html/*.png
 
 
-## Nested configure hacks
-if CALLED_BY_PARENT
-
-## Make doc get installed
+## Make doc files get installed
 nobase_nodist_doc_DATA = $(URI_DOC_FILES)
-
-## Kill automake error
-DIST_COMMON = $(DIST_COMMON)
-
-else
-
-## Make Automake not ship package sources
-DIST_COMMON =
-
-## Make doc go into dist when run from doc folder
-EXTRA_DIST = $(URI_DOC_FILES)
-
-endif
